pipeline/webserver/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-server
spec:
  selector:
    app: prediction-server
  type: ClusterIP
  ports:
    - port: 9696
      targetPort: 9696
